<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="RtlHardcoded"
    android:id="@+id/mainLayout">



    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.0dip"
        android:layout_marginTop="0.0dip">

        <LinearLayout
            android:id="@+id/linearCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/newbg"
            android:orientation="horizontal"
            android:weightSum="14.0">

            <TextView
                android:id="@+id/m_time"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="2.7"
                android:paddingBottom="3.0dip"
                android:paddingLeft="7.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/time"
                android:textColor="@color/cone" />

            <TextView
                android:id="@+id/m_type"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="2.3"
                android:paddingLeft="9.0dip"
                android:paddingBottom="3.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/type"
                android:textColor="@color/cone" />

            <TextView
                android:id="@+id/m_ping"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="3.0"
                android:gravity="right"
                android:paddingRight="7.0dp"
                android:paddingBottom="3.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/ping"
                android:textColor="@color/cone" />

            <TextView
                android:id="@+id/m_download"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="3.0"
                android:gravity="right"
                android:paddingBottom="3.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/download"
                android:textColor="@color/cone" />

            <TextView
                android:id="@+id/m_upload"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="1.0dip"
                android:layout_weight="3.0"
                android:gravity="right"
                android:paddingBottom="3.0dip"
                android:paddingRight="2.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/upload"
                android:textColor="@color/cone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>